build : Thymeleaf 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,9 @@ spring:
     include:
       - datasource
       - mail
+  thymeleaf:
+    prefix: ${FOORUN_PIGEON_EMAIL_TEMPLATE_BASE_URL}
+    suffix: .html
 
 server:
   servlet:
